makko/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana-oss
        name: grafana
        volumeMounts:
        - name: config
          mountPath: /var/lib/grafana
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 50m
            memory: 128Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: grafana-config
          readOnly: false
