makko/monitoring/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.senk0.com"
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
